--- a/rnd.css
+++ b/rnd.css
@@ -9,6 +9,15 @@ html,body{
     width:75%;
 }
 
+.offers{
+    
+    display:flex;
+    flex-direction: column;
+    width:75%;
+    margin:5px auto;
+    box-shadow: 0px 0px 4px 0px grey;
+}
+
 .leaseOffers{
     
     display:flex;
@@ -40,6 +49,7 @@ html,body{
     min-height:3em;
     display: flex;
     align-items: center;
+    cursor: pointer;
 }
 
 .offerTitle{
@@ -57,6 +67,8 @@ html,body{
     color:white;
     background-color: red;
 }
+
+
 
 .arrow{
     text-align: right;
